spacing issue fix on results page

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -538,7 +538,7 @@ div.results {
 
 .result1:nth-child(n+1):nth-child(even) {
 	float: right;
-	margin-right: 15ex;
+	margin-right: 10ex;
 }
 .result1:nth-child(n+1):nth-child(even) h3 {
 	float: right;
@@ -561,7 +561,7 @@ div.results {
 }
 #schoolResults li {
 	list-style-type: none;
-	margin-left: 15ex;
+	margin-left: 10ex;
 }
 
 #result2title {
